Switch to individual OSGi artifacts with compile dependency instead of osgi.core and osgi.cmpn with provided dependency.